[tool.poetry]
name = "audioprocessing-project"
version = "0.1.0"
description = ""
authors = ["Suvi Liimatainen <suvi.liimatainen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.23.0,<3.0.0"
soundfile = ">=0.13.1,<0.14.0"
pyaudio = ">=0.2.14,<0.3.0"
pytest = "^8.4.1"
flask = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

